--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ body {
       overflow-y: hidden;
       width: 100%;
       height: 100%;
-      background-image: url('bg.jpg');
+      background-image: url('gambar/bg.jpg');
       background-position: center;
       background-size: 300% 100%;
       background-repeat: no-repeat;
