--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
    overflow-y: hidden;
    width: 100%;
    height: 100%;
-   background-image: url('bg.jpg');
+   background-image: url('./assest/gambar/bg.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
@@ -156,7 +156,7 @@ body {
       display: inline-block;
       width: calc(50% - 2.5px);
       height: 100%;
-      background-image: url(gambar/pintumobile.png);
+      background-image: url(./assest/gambar/pintumobile.png);
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -166,7 +166,7 @@ body {
       overflow-y: hidden;
       width: 100%;
       height: 100%;
-      background-image: url('gambar/bg.jpg');
+      background-image: url('./assest/gambar/bg.jpg');
       background-position: center;
       background-size: 300% 100%;
       background-repeat: no-repeat;
