--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
    overflow-y: hidden;
    width: 100%;
    height: 100%;
-   background-image: url('./assest/gambar/bg.jpg');
+   background-image: url('/assest/gambar/bg.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
@@ -166,7 +166,7 @@ body {
       overflow-y: hidden;
       width: 100%;
       height: 100%;
-      background-image: url('./assest/gambar/bg.jpg');
+      background-image: url('/assest/gambar/bg.jpg');
       background-position: center;
       background-size: 300% 100%;
       background-repeat: no-repeat;
